# stupid-simple-tools

./: .gitignore  README.md  pdf-merge.py  pyproject.toml
sst/: __init__.py  pdf_merge.py
tests/: __init__.py  test_pdf_merge.py
